<resources>
    <string name="client_secret">5ac6ef8dae6a411a858da52ba8aec797</string>
    <string name="ins_client_id">af9ee94415724a3c8b74628f87a24ad5</string>
    <string name="qq_sdk_id">1103691791</string>
    <string name="app_id">319199081574981</string>
    <string name="app_name">Aloha</string>
    <string name="facebook">Facebook</string>
    <string name="sina_weibo">Weibo</string>
    <string name="wechat">Wechat</string>
    <string name="dynamic_content_rightnow">Now</string>
    <string name="time_afterSeconds">s</string>
    <string name="time_afterDay">d</string>
    <string name="time_afterWeek">w</string>
    <string name="time_afterminutes">m</string>
    <string name="time_afterhours">h</string>
    <string name="copy">Copy</string>
    <string name="procedural_error">Aloha System Error</string>
    <string name="report_user_failure">Report Failed</string>
    <string name="gesture_password_addition">pdkjmuYhjOUgfy6HNGiufjUIFOoIUjfmKDIUGH98jHUD84jKLDJFHJ8hdHkdj0Kn</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="signin">Sign In</string>
    <string name="logout">Sign Out</string>
    <string name="logout_confirm">Confirm?</string>
    <string name="old_pwd">Current Password</string>
    <string name="config_pwd_empty">Please input current password</string>
    <string name="config_pwd_new_empty">Please input a new password</string>
    <string name="config_pwd_new_again">Please confirm your new password</string>
    <string name="forgot_pw">Forgot password?</string>
    <string name="login_password">Password</string>
    <string name="new_phone_num">New phone number</string>
    <string name="enter_security_code">Verification Code</string>
    <string name="resend_security_code">Resend verification code</string>
    <string name="resend_security_code_to">Resend verification code to: </string>
    <string name="verification_code_has_been_sent">Sent</string>
    <string name="reg_sms_deliver_confirm_content">We will send a verification code to the following number: </string>
    <string name="terms_of_service">Term of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="reg_sms_deliver">Confirmation</string>
    <string name="being_sign_in_please_wait">Loading...</string>
    <string name="login_failed">Phone number or Password is not correct.</string>
    <string name="login_proscribe"></string>
    <string name="login_success"></string>
    <string name="modify_success">Password Changed.</string>
    <string name="change_num_success">Your Mobile Number has changed.</string>
    <string name="resend_verification_code_to">Resend to：%1$s</string>
    <string name="verification_code_has_been_sent_to">Verification code has been sent to：</string>
    <string name="verification_code_cant_be_empty">Verification code is empty.</string>
    <string name="verification_code_has_delay_be_sure_to_restart">The verification message may be slightly delayed. Go back and start again now?</string>
    <string name="continue_to_wait">Wait</string>
    <string name="didnot_receive_security_code">No message received?</string>
    <string name="you_entered_psd_is_wrong">Current password is not correct.</string>
    <string name="the_phone_had_registed">Phone number is already registered</string>
    <string name="phone_num_incorrect_format">Please input valid phone number</string>
    <string name="register_too_multifarious">Please try again later.</string>
    <string name="verification_code_has_been_sent_but_faile">Please check and re-enter the code.</string>
    <string name="mobile_error">Invalid Phone Number</string>
    <string name="login_error_invalid_account">Please input valid phone number</string>
    <string name="register_mobile_error">Phone number is already registered</string>
    <string name="register_frequent_request">Please try again later.</string>
    <string name="register_mobile_error_noregister">Phone number is not existed.</string>
    <string name="config_pwd_again_empty">Please confirm your new password</string>
    <string name="login_error_pwd_to_diff">Passwords do not match</string>
    <string name="login_error_pwd_to_short">Password must be at least 6 characters; Only contain letters, numbers &#38; common symbol</string>
    <string name="get_code_error">Error</string>
    <string name="describe_yourself">About you&#8230;</string>
    <string name="aloha">Aloha</string>
    <string name="nope">Nope</string>
    <string name="select_user_type_random">Random</string>
    <string name="select_user_type_online">Online</string>
    <string name="select_user_type_near">Nearby</string>
    <string name="select_user_type_local">Local</string>
    <string name="select_user_type_personalized">Personalized</string>
    <string name="select_user_type_new">New</string>
    <string name="select_user_type_hot">Hot</string>
    <string name="search_ing">Loading...</string>
    <string name="no_more_to_explore_now">No more to explore now</string>
    <string name="no_more_to_explore_now_message">You will get some more friends to view on each Aloha Time. The timer will tell you how long the next Aloha Time needed.</string>
    <string name="close_feed_guide">Close</string>
    <string name="ok_i_know">Close</string>
    <string name="last_refresh_time">Load more history</string>
    <string name="archives">Profile</string>
    <string name="send_message">Send</string>
    <string name="send_message_ing">Sending...</string>
    <string name="send_message_error">Failed. Please try again later.</string>
    <string name="unable_to_get_the_session_list">Network disconnected</string>
    <string name="prompt_user_has_been_banned">User has been blocked.</string>
    <string name="chat_message_summary_image">[Image]</string>
    <string name="deleted_or_nohave_user_by_service">This user does not exist.</string>
    <string name="deleted_user_by_service">The user has been deleted.</string>
    <string name="share_post">Share</string>
    <string name="camera_capture">Take a photo</string>
    <string name="camera_select">Choose from Album</string>
    <string name="camera_crop_cancel">Cancel</string>
    <string name="camera_crop_select">Choose</string>
    <string name="profile_aloha_get">&#160;Followers</string>
    <string name="profile_aloha_title">Following(%1$d)</string>
    <string name="profile_blacklist_title">Blocked List</string>
    <string name="profile_aloha_get_title">Followers(%1$d)</string>
    <string name="profile_blacklist_remove">Remove</string>
    <string name="unAloha">unAloha</string>
    <string name="add_to_black_list">Block User</string>
    <string name="add_to_black_list_success">Blocked</string>
    <string name="remove_from_black_list">Unblock</string>
    <string name="remove_from_black_list_success">Unblocked</string>
    <string name="remove_from_black_list_failure">Unblock failed</string>
    <string name="update_title">New version</string>
    <string name="action_settings">Settings</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_notification_title_preference">SOUNDS AND VIBRATION</string>
    <string name="setting_notification_ring_tone">Ringtone</string>
    <string name="setting_notification_vibration">Vibration</string>
    <string name="setting_notification_title_privacy">PRIVACY</string>
    <string name="setting_notification_show_message_summary">Show Detail</string>
    <string name="prefer_setting_notification">Push Preferences</string>
    <string name="prefer_setting_notification_itemtitle">Push Preferences</string>
    <string name="setting_notification_title_post_like">LIKES</string>
    <string name="setting_notification_title_post_tag">PHOTOS OF YOU</string>
    <string name="setting_notification_title_aloha_push">NEW FOLLOWERS</string>
    <string name="setting_notification_title_post_comment">COMMENTS</string>
    <string name="setting_notification_post_close">OFF</string>
    <string name="setting_notification_post_everyone">From Everyone</string>
    <string name="setting_notification_post_matcher">From People I Aloha</string>
    <string name="instagram_start">Enable Sync</string>
    <string name="instagram_chose_type">WHAT TO SYNC?</string>
    <string name="instagram_have_opened">Sync Enabled</string>
    <string name="instagram_six_months">Photos in last 6 months</string>
    <string name="instagram_all">All photos</string>
    <string name="instagram_title">Instagram</string>
    <string name="instagram_auto">Sync new photos automatically</string>
    <string name="instagram_token_overdue">Instagram&#160;Sync disabled</string>
    <string name="instagram_have_token">Sync Enabled</string>
    <string name="instagram_success">It will take a while before sync completed, we will let you know when we finished.</string>
    <string name="instagram_successed_rule">New photos posted on Instagram will be automatically sync to your Aloha profile and the Moments.</string>
    <string name="user_was_fucked">Invalid User</string>
    <string name="instagram_error">Sync Failed</string>
    <string name="aloha_time_now_local_title">Aloha Time!</string>
    <string name="aloha_time_now_local_content">New Friends is waiting for you.</string>
    <string name="push_no_detail_summary">You\'ve got %2$d messages from %1$d friends.</string>
    <string name="instagram_have_finshed">Instagram Sync completed</string>
    <string name="aloha_push_notification_new_match">Yoooo! Here\'s your new MATCH!</string>
    <string name="aloha_push_notification_new_message_nodetail">You\'ve got a new message.</string>
    <string name="aloha_push_notification_new_message_photo">[Image]</string>
    <string name="aloha_push_notification_new_message_text">%2$s</string>
    <string name="aloha_push_notification_post_like">liked your photo</string>
    <string name="aloha_push_notification_post_comment">left a comment on your photo</string>
    <string name="aloha_push_notification_post_comment_reply">replied：</string>
    <string name="aloha_push_notification_post_nodetail">You\'ve got %1$d notifications.</string>
    <string name="aloha_push_notification_aloha">started following you</string>
    <string name="aloha_push_notification_post_aloha_nodetail">%1$d guys started following you</string>
    <string name="china_86">China(+86)</string>
    <string name="confirm">Confirm</string>
    <string name="advanced_features">Aloha Pro</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="continued">NEXT</string>
    <string name="save_and_signin">Save and Sign In</string>
    <string name="set_up_new_password">Set a new password</string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="introduction_act_title">About</string>
    <string name="promotion_code">Invitation Code</string>
    <string name="promotion_code_statment">Please Enter the Invitation Code from your friends, you will unlock Aloha Pro feature to view more friends. \n If you don\'t have an invitation code, press Skip.</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="invite_someone_deblocking_profeature">1 successful referral to unlock</string>
    <string name="pro">PRO</string>
    <string name="immediately_open_all_functions">Get full Aloha Pro</string>
    <string name="private_comments">Here are some private comments</string>
    <string name="private_comments_description">In the previous version, comments can only be viewed by those who left them and be viewed by the post owner. While the private comments remain private, all the comments left in the new version will be open to everyone to view.</string>
</resources>