<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/act_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/menu_bar"
        style="@style/aloha_title_container" >

        <ImageView
            android:id="@+id/change_pwd_back_tv"
            style="@style/aloha_title_back_btn"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/title"
            style="@style/aloha_title"
            android:text="@string/change_password" />

        <TextView
            android:id="@+id/config_change_password_save"
            style="@style/aloha_title_red_btn"
            android:text="@string/save" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/nav_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:background="@color/line" >
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff" >

        <EditText
            android:id="@+id/config_change_password"
            style="@style/aloha_listitem_btn_left"
            android:layout_width="match_parent"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/old_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" >
    </View>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="40dp"
        android:background="@color/line" >
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff" >

        <EditText
            android:id="@+id/config_change_password_new"
            style="@style/aloha_listitem_btn_left"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line"
            android:layout_alignLeft="@+id/config_change_password_new"
            android:layout_alignStart="@+id/config_change_password_new"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fff" >

        <EditText
            android:id="@+id/config_change_password_again"
            style="@style/aloha_listitem_btn_left"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/config_pwd_new_again"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:textSize="12sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" >
    </View>

</LinearLayout>