<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="220dp"
  android:gravity="center"
  android:background="@color/red">
   <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/shape_pro_text"
          android:text="@string/pro"
          android:textColor="@color/red"
          android:textSize="18sp"
          android:paddingLeft="10dp"
          android:paddingRight="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginEnd="10dp" />
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/white_color"
          android:textSize="23sp"
          android:typeface="serif"
          android:text="@string/advanced_features" />
   </LinearLayout>
   <TextView 
       android:id="@+id/deblock_rule_tv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/white_color"
       android:layout_margin="10dp"
       android:text="@string/invite_someone_deblocking_profeature" />
   <Button 
       android:id="@+id/deblock_btn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/shape_pro_btn"
       android:drawableLeft="@drawable/aloha_heart"
       android:drawableStart="@drawable/aloha_heart"
       android:drawablePadding="10dp"
       android:layout_marginTop="20dp"
       android:paddingLeft="15dp"
       android:paddingRight="15dp"
       android:paddingStart="15dp"
       android:paddingEnd="15dp"
       android:textSize="20sp"
       android:text="@string/immediately_open_all_functions" />
   <TextView 
       android:id="@+id/deblock_reward_tv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:visibility="gone"/>
</LinearLayout>
