<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch" >

    <Button
        android:id="@+id/cancle"
        style="@style/login_register_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cancle"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingLeft="40dp" >

        <TextView
            android:id="@+id/set_up_new_password"
            style="@style/login_register_btn"
            android:text="@string/set_up_new_password"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:digits="`1234567890-=~!@#$%^&amp;*()_+qwertyuiop[]\asdfaghjkl&apos;zxcvbnm,./QWERTYUIOP{}|ASDFGHJKL:&quot;ZXCVBNM&lt;>"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#50ffffff"
            android:textCursorDrawable="@null"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/new_password_again"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:digits="`1234567890-=~!@#$%^&amp;*()_+qwertyuiop[]\asdfaghjkl&apos;zxcvbnm,./QWERTYUIOP{}|ASDFGHJKL:&quot;ZXCVBNM&lt;>"
            android:hint="@string/config_pwd_new_again"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#50ffffff"
            android:textCursorDrawable="@null"
            android:textSize="22sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/login_btn"
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_register_btns"
            android:text="@string/save_and_signin"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </RelativeLayout>

</RelativeLayout>