<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch" >

    <Button
        android:id="@+id/dialog_cancle"
        style="@style/login_register_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_cancle"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/verify_code_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_code_has_been_sent_to"
            android:textSize="13sp"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/verify_code_mobile_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/dialog_input_auth_code_box"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_security_code"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#50ffffff"
            android:textCursorDrawable="@null"
            android:textSize="22sp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/dialog_last"
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_register_btns"
            android:text="@string/continued"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/dialog_get_sms_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_last"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:paddingTop="10dp"
            android:text="@string/didnot_receive_security_code"
            android:textColor="#7fffffff"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>