<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="23dip"
        android:drawableLeft="@drawable/message_lock"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/message_lock"
        android:gravity="center"
        android:text="@string/private_comments"
        android:textColor="@color/black_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/private_comments_description"
        android:textColor="@color/black_text"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dip"
        android:background="@color/line" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:background="@drawable/selector_first_dialog_cancel_btns"
        android:text="@string/confirm"
        android:textColor="@color/light_red"
        android:textSize="16sp" />

</LinearLayout>