<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/menu_bar"
        style="@style/aloha_title_container" >

        <ImageView
            android:id="@+id/config_introduction_back"
            style="@style/aloha_title_back_btn"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/title"
            style="@style/aloha_title"
            android:text="@string/introduction_act_title" />

        <TextView
            android:id="@+id/config_introduction_save_tv"
            style="@style/aloha_title_red_btn"
            android:text="@string/save" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" >
    </View>

    <ScrollView
        android:id="@+id/config_introduction_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:clickable="true" >

        <EditText
            android:id="@+id/config_introduction_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLength="140"
            android:padding="10dp"
            android:hint="@string/describe_yourself" />
    </ScrollView>

</LinearLayout>