<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/menu_bar"
        style="@style/aloha_title_container" >

        <TextView
            style="@style/aloha_title"
            android:text="@string/promotion_code" />

        <TextView
            android:id="@+id/invitation_save"
            style="@style/aloha_title_red_btn"
            android:text="@string/skip" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" >
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_applestyle_list"
        android:paddingLeft="20dp" >

        <EditText
            android:id="@+id/invitation_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:digits="`1234567890-=~!@#$%^&amp;*()_+qwertyuiop[]\asdfaghjkl&apos;zxcvbnm,./QWERTYUIOP{}|ASDFGHJKL:&quot;ZXCVBNM&lt;>"
            android:hint="@string/promotion_code"
            android:singleLine="true"
            android:textColorHint="@color/light_gray_text"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/promotion_code_statment"
        android:textColor="@android:color/darker_gray" />

</LinearLayout>